# caffe2_cpp_tutorial

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
include/: shared.h
include/caffe2/operator/: affine_scale_op.h  back_mean_op.h  cout_op.h  diagonal_op.h  mean_stdev_op.h  show_worst_op.h  squared_l2_channel_op.h  squared_l2_op.h  time_plot_op.h  zero_one_op.h
include/caffe2/util/: blob.h  cmd.h  misc.h  model.h  net.h  plot.h  preprocess.h  progress.h  table.h  tensor.h  train.h  window.h
include/caffe2/zoo/: alexnet.h  googlenet.h  keeper.h  mobilenet.h  resnet.h  squeezenet.h  vgg.h
include/cvplot/: color.h  cvplot.h  plot.h  window.h
include/operator/: affine_scale_op.cc  affine_scale_op.cu  affine_scale_op.h  affine_scale_op_cudnn.cc  back_mean_op.cc  back_mean_op.cu  back_mean_op.h  back_mean_op_cudnn.cc  cout_op.h  diagonal_op.cc  diagonal_op.cu  diagonal_op.h  diagonal_op_cudnn.cc  mean_stdev_op.cc  mean_stdev_op.cu  mean_stdev_op.h  mean_stdev_op_cudnn.cc  operator_cout.h  operator_zero_one.h  show_worst_op.cc  show_worst_op.h  zero_one_op.cc  zero_one_op.h
include/util/: build.h  cmd.h  cuda.h  image.h  math.h  misc.h  models.h  net.h  operator.h  print.h  zoo.h
script/: download_extra.sh  download_resource.sh
src/: alexnet.cpp  diff.cpp  dream.cpp  googlenet.cpp  imagenet.cpp  inspect.cpp  intro.cpp  mnist.cpp  pretrained.cpp  retrain.cpp  squeeze.cpp  squeezenet.cpp  toy.cpp  train.cpp  vgg16.cpp
src/caffe2/binaries/: diff.cc  dream.cc  imagenet.cc  inspect.cc  intro.cc  intro.cpp  mnist.cc  mnist.cpp  plot.cc  pretrained.cc  pretrained.cpp  retrain.cc  rnn.cc  rnn.cpp  toy.cc  toy.cpp  train.cc
src/caffe2/operator/: affine_scale_op.cc  affine_scale_op.cu  back_mean_op.cc  back_mean_op.cu  cout_op.cc  diagonal_op.cc  diagonal_op.cu  mean_stdev_op.cc  mean_stdev_op.cu  show_worst_op.cc  squared_l2_channel_op.cc  squared_l2_channel_op.cu  squared_l2_op.cc  squared_l2_op.cu  time_plot_op.cc  zero_one_op.cc
src/caffe2/util/: blob.cc  external.pb.cc  external.pb.h  external.proto  model.cc  model.proto  net.cc  net_gradient.cc  net_operator.cc  net_serial.cc  plot.cc  progress.cc  table.cc  tensor.cc  window.cc
src/cvplot/: color.cc  cvplot.cpp  figure.cc  internal.h  plot.cc  window.cc
test/caffe2/core/: core_test.cc
test/caffe2/util/: net_gradient_test.cc  net_test.cc
test/util/: net_gradient_test.cc  net_test.cc
